[gd_scene load_steps=11 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://JoinDialog.gd" type="Script" id=2]
[ext_resource path="res://PlayerList.gd" type="Script" id=3]
[ext_resource path="res://assets/images/GhostShip_Assets/character_icons/character0.png" type="Texture" id=4]
[ext_resource path="res://assets/images/kenney_input/tile_0735.png" type="Texture" id=5]
[ext_resource path="res://CharacterSelector.gd" type="Script" id=6]
[ext_resource path="res://assets/fonts/kenney_fontpackage/Kenney Mini.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 7 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 8
font_data = ExtResource( 7 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 2

[node name="CreateButton" type="Button" parent="VBoxContainer"]
margin_top = 58.0
margin_right = 256.0
margin_bottom = 84.0
text = "Create"

[node name="JoinButton" type="Button" parent="VBoxContainer"]
margin_top = 88.0
margin_right = 256.0
margin_bottom = 114.0
text = "Join"

[node name="CharacterSelectorButton" type="Button" parent="VBoxContainer"]
margin_top = 118.0
margin_right = 256.0
margin_bottom = 144.0
text = "character Selector"

[node name="CreateDialog" type="AcceptDialog" parent="."]
margin_left = 20.0
margin_top = 37.0
margin_right = 228.0
margin_bottom = 125.0
popup_exclusive = true
window_title = "Waiting for players..."
dialog_hide_on_ok = false

[node name="ScrollContainer" type="ScrollContainer" parent="CreateDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 212.0
margin_bottom = 46.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="CreateDialog/ScrollContainer"]
margin_right = 74.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="CreateDialog/ScrollContainer/VBoxContainer"]
margin_right = 61.0
margin_bottom = 14.0
text = "Loading..."

[node name="PlayerList" type="VBoxContainer" parent="CreateDialog/ScrollContainer/VBoxContainer"]
script = ExtResource( 3 )

[node name="JoinDialog" type="WindowDialog" parent="."]
visible = true
margin_left = 36.0
margin_top = 41.0
margin_right = 215.0
margin_bottom = 112.0
popup_exclusive = true
window_title = "Waiting for players..."
script = ExtResource( 2 )

[node name="ConnectVBoxContainer" type="VBoxContainer" parent="JoinDialog"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ErrorLabel" type="Label" parent="JoinDialog/ConnectVBoxContainer"]
visible = false
modulate = Color( 0.960784, 0.0196078, 0.0196078, 1 )
margin_right = 179.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )

[node name="SpinBox" type="SpinBox" parent="JoinDialog/ConnectVBoxContainer"]
margin_right = 220.0
margin_bottom = 30.0
align = 1

[node name="ConnectButton" type="Button" parent="JoinDialog/ConnectVBoxContainer"]
margin_top = 34.0
margin_right = 220.0
margin_bottom = 60.0
text = "Connect"

[node name="WaitScrollContainer" type="ScrollContainer" parent="JoinDialog"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="JoinDialog/WaitScrollContainer"]
margin_bottom = 24.0

[node name="Label" type="Label" parent="JoinDialog/WaitScrollContainer/VBoxContainer"]
margin_bottom = 14.0

[node name="PlayerList" type="VBoxContainer" parent="JoinDialog/WaitScrollContainer/VBoxContainer"]
margin_top = 18.0
margin_bottom = 18.0
script = ExtResource( 3 )

[node name="CharacterSelector" type="WindowDialog" parent="."]
visible = true
margin_left = 42.0
margin_top = 34.0
margin_right = 205.0
margin_bottom = 124.0
window_title = "Character selector"
script = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterSelector"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="HBoxContainer" type="HBoxContainer" parent="CharacterSelector/VBoxContainer"]
margin_right = 206.0
margin_bottom = 32.0
alignment = 1

[node name="LeftButton" type="TextureButton" parent="CharacterSelector/VBoxContainer/HBoxContainer"]
margin_left = 67.0
margin_right = 83.0
margin_bottom = 32.0
rect_min_size = Vector2( 16, 0 )
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 3
flip_h = true

[node name="TextureRect" type="TextureRect" parent="CharacterSelector/VBoxContainer/HBoxContainer"]
margin_left = 87.0
margin_right = 119.0
margin_bottom = 32.0
texture = ExtResource( 4 )

[node name="RightButton" type="TextureButton" parent="CharacterSelector/VBoxContainer/HBoxContainer"]
margin_left = 123.0
margin_right = 139.0
margin_bottom = 32.0
rect_min_size = Vector2( 16, 0 )
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 3

[node name="LineEdit" type="LineEdit" parent="CharacterSelector/VBoxContainer"]
margin_top = 36.0
margin_right = 206.0
margin_bottom = 66.0
max_length = 12

[connection signal="pressed" from="VBoxContainer/CreateButton" to="." method="_on_CreateButton_pressed"]
[connection signal="pressed" from="VBoxContainer/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CharacterSelectorButton" to="." method="_on_CharacterSelectorButton_pressed"]
[connection signal="confirmed" from="CreateDialog" to="." method="_on_CreateDialog_confirmed"]
[connection signal="popup_hide" from="CreateDialog" to="." method="_on_popup_hide"]
[connection signal="popup_hide" from="JoinDialog" to="." method="_on_popup_hide"]
[connection signal="popup_hide" from="JoinDialog" to="JoinDialog" method="_on_JoinDialog_popup_hide"]
[connection signal="pressed" from="JoinDialog/ConnectVBoxContainer/ConnectButton" to="JoinDialog" method="_on_ConnectButton_pressed"]
[connection signal="about_to_show" from="CharacterSelector" to="CharacterSelector" method="_on_CharacterSelector_about_to_show"]
[connection signal="popup_hide" from="CharacterSelector" to="CharacterSelector" method="_on_CharacterSelector_popup_hide"]
[connection signal="pressed" from="CharacterSelector/VBoxContainer/HBoxContainer/LeftButton" to="CharacterSelector" method="_on_LeftButton_pressed"]
[connection signal="pressed" from="CharacterSelector/VBoxContainer/HBoxContainer/RightButton" to="CharacterSelector" method="_on_RightButton_pressed"]
